# py_cheat_sheet

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
py_cheat_sheet/: .env.example  bot.py
py_cheat_sheet/cheat_sheet/: cheat_sheet.txt
py_cheat_sheet/config_data/: config.py
py_cheat_sheet/db/: db.py
py_cheat_sheet/filters/: filters.py
py_cheat_sheet/handlers/: other_handlers.py  user_handlers.py
py_cheat_sheet/keyboards/: contents_kb.py  main_menu.py  pagination_kb.py
py_cheat_sheet/lexicon/: lexicon.py
py_cheat_sheet/services/: text_handling.py
