[tool.poetry]
name = "py-cheat-sheet"
version = "0.1.0"
description = ""
authors = ["Ruslan Esakov <esakov2dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
environs = "^9.5.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
